# reddit-bots

./: .gitignore  .replit  README.md
election_bot/: keep_alive.py  news.py  newsbot.py  parser.py  pyproject.toml  reddit-agent.py  requirements.txt
emoticon_bot/: emojidb.json  emoticonbot.py  emoticons.py  reddit_helper.py  replies.py  requirements.txt
link_guru/: logger_file.py  news.py  news_summary.py  newsbot.py  pyproject.toml  reddit_helper.py  requirements.txt  supported_sites.json
link_guru/custom_scrapers/: __init__.py  common.py  ekantipur.py  thekathmandupost.py
link_guru/templates/: footer.py  news.py
rnepal_bot/: milestone.py  milestone_template.py  past_links.json  tmp.json
