[tool.poetry]
name = "link_guru"
version = "0.1.0"
description = ""
authors = ["hemanta212 <sharmahemanta.212@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
praw = "^7.0.0"
requests = "^2.23.0"
translate = "^3.5.0"
googletrans = { git = "https://github.com/ssut/py-googletrans.git" }
newspaper3k-wrapper = {git = "https://github.com/pykancha/newspaper3k_wrapper.git"}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
epc = "^0.0.5"
importmagic = "^0.1.7"
ptpython = "^3.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
